# insider-detection

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
dashboard/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  prettier.config.js  vite.config.ts
dashboard/src/: App.tsx
dashboard/src/lib/: api.ts
dashboard/src/test/: components.test.tsx
migrations/: 0001_initial_schema.sql
src/: lib.rs
src/api/: routes.rs
src/data_api/: client.rs
src/gamma/: client.rs
src/scorer/: factors.rs  model.rs
src/subgraph/: orderbook.rs
