[package]
name = "insider-detection"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[[bin]]
name = "scorer"
path = "src/bin/scorer.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "score-wallet"
path = "src/bin/score_wallet.rs"

[dependencies]
# Async runtime
tokio   = { version = "1", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "rust_decimal",
    "macros",
] }

# API
axum       = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (GraphQL + Gamma API)
reqwest = { version = "0.12", features = ["json"] }

# Utils
chrono             = { version = "0.4", features = ["serde"] }
rust_decimal       = { version = "1", features = ["serde-with-str"] }
dotenvy            = "0.15"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow             = "1"
thiserror          = "2"
tokio-util         = "0.7"

[lints.rust]
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[lints.clippy]
# Correctness
unwrap_used = "warn"
expect_used = "warn"
# Style / idioms
cloned_instead_of_copied = "warn"
explicit_iter_loop = "warn"
manual_string_new = "warn"
redundant_closure_for_method_calls = "warn"
# Performance
needless_pass_by_value = "warn"
# Allow: these fire in generated/macro code or have acceptable exceptions
too_many_arguments = "allow"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
